--- a/style.css
+++ b/style.css
@@ -1,1 +1,465 @@
+ @font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/roboto/v27/KFOmCnqEu92Fr1Mu4mxK.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+ html, body {
+   font-family: 'Roboto';
+   overflow-x: hidden;
+}*{margin: 0;padding: 0;outline: none;border: none;-webkit-box-sizing: border-box;}*:before,*:after{-webkit-box-sizing: border-box;}
+body a{
+    color:#50B167;
+    text-decoration:none;
+}
 
+:root {
+    --shadow-1: 0 7px 5px -6px rgba(150,170,180,0.5); /*Header & Sidenav Close*/
+    --shadow-2: 8px 0 10px -8px rgba(150,170,180,0.5); /*Sidenav Right Side*/
+    --shadow-3: rgba(100, 100, 111, 0.5) 0px 3px 9px 0px; /*Social Share Button*/
+    --shadow-4: 0 -8px 10px -7px rgba(150,170,180,0.5); /*Mobile Footer*/
+    }
+
+.header{
+    background-color:#FFF;
+    color:#FFF;
+    text-align:center;
+    font-family:'Roboto';
+    font-style: normal;
+    font-size:25px;
+    font-weight: bold;
+    padding-top:12px;
+    height:60px;
+    box-shadow: var(--shadow-1);
+    }
+
+.lngu{
+display: block;
+float: right;
+position: absolute;
+top:12px;
+right:-4px;
+font-size: 14px;
+text-align: center;
+text-decoration: none;
+color:#000;
+margin: 3px 10px;
+height:30px;
+width:30px;
+border-radius:50%;
+height:30px;
+width:30px;
+border:1px solid #000;
+padding:6px;
+}
+
+.lngu:hover{
+    border:1px solid #50B167;
+    color:#50B167;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+    
+div.scrollmenu {
+  background-color: #FFF;
+  overflow: auto;
+  white-space: nowrap;
+  box-shadow: var(--shadow-1);
+  border-top:1px solid rgba(150,170,180,0.5);
+}
+
+div.scrollmenu a {
+  display: inline-block;
+  color: #000;
+  text-align: center;
+  padding: 10px;
+  padding-left:5px;
+  padding-right:5px;
+  font-size:17px;
+  font-weight:normal;
+  text-decoration: none;
+}
+
+div.scrollmenu a:hover {
+  color:#50B167;
+}
+
+.menuicon {
+    display: block;
+    float: left;
+    position: absolute;
+    top:9px;
+    left:5px;
+}
+
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #FFF;
+    color:000000;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 47px;
+    box-shadow: var(--shadow-2);
+    }
+
+.sideitem a {
+    padding: 8px 8px 8px 15px;
+    text-decoration: none;
+    font-size: 16px;
+    color: #000000;
+    display: block;
+    border-bottom:1px solid rgba(150,170,180,0.5);
+    }
+
+.sideitem a:hover {
+    background-color:#50B167;
+    color: #FFF;
+    }
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    padding-left:20px;
+    padding-top:15px;
+    font-size: 25px;
+    font-weight:bold;
+    background-color:#50B167;
+    color:#FFF;
+    width: 290px;
+    height: 60px;
+    box-shadow: var(--shadow-1);
+    }
+
+.sideitem {
+    margin-top:13px;
+    }
+.sideitem li{
+    line-height:1.8;
+    }
+
+/*-----------------------
+Drop Down Menu
+------------------------*/
+
+#mySidenav::-webkit-scrollbar{
+    width: 0px;
+    }
+div.scrollmenu::-webkit-scrollbar{
+width: 0;
+height:0;
+} 
+.srp-menu input[type="checkbox"]{
+    display: none;
+    }
+.srp-menu ul,
+.srp-menu ul ul{
+    position: static;
+    opacity: 1;
+    visibility: visible;
+    background: none;
+    max-height: 0px;
+    overflow: hidden;
+    background: #DDDDDD;
+    color:#fff;
+    }
+.drop-down a{
+    color:#000;
+    }
+.drop-down a:hover{
+    color:#fff;
+    }
+.srp-menu #education:checked ~ ul,
+.srp-menu #exam:checked ~ ul,
+.srp-menu #result:checked ~ ul,
+.srp-menu #me-details:checked ~ ul,
+.srp-menu #top-jobs:checked ~ ul,
+.srp-menu #test-series:checked ~ ul{
+    max-height: 100vh;
+    }
+.srp-menu ul li{
+    margin: 0px 0px;
+    }
+.srp-menu label {
+    padding: 8px 8px 8px 15px;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight:bold;
+    color: #000000;
+    display: block;
+    border-bottom:1px solid rgba(150,170,180,0.5);
+    }
+.drop-down-icon::after {
+    float: right;
+    margin-right:10px;
+    content: "+";
+    }
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 12px;}
+}
+
+.main-data {
+    width:100%;
+    height:auto;
+}
+
+.content_area {
+    float: none;
+    display: block;
+    margin:10px;
+    border: 1px solid #50B167;
+    line-height:1.8;
+    font-family:'Roboto';
+    font-style: normal;
+    border-radius:5px;
+}
+
+.content_area h2{
+    margin-top:4px;
+    margin-bottom:4px;
+    font-size:17px;
+}
+
+.content_area p{
+    padding: 10px;
+    line-height:1.8;
+    text-align: justify;
+    font-size:16px;
+    word-spacing:2px;
+}
+
+h2.heading {
+    background: none;
+    padding: 6px;
+    border: 1px solid #50B167;
+    border-left:none;
+    border-right:none;
+    text-align:center;
+    font-size:17px;
+}
+
+/*age start*/
+.btm_btns {
+    width: 100%;
+    text-align: center;
+}
+.btm_pbtn {
+    background-color: #50B167;
+    color: #fff;
+    text-decoration: none;
+    display: inline-block;
+    vertical-align: top;
+    font-size: 16px;
+    width: 100px;
+    border-radius:5px;
+    margin:4px;
+    padding:10px;
+    border:1px solid #50B167;
+}
+.hline {
+    border-top:1px solid #50B167;
+}
+
+#container {
+	text-align: center;
+	border:1px solid #50B167;
+	margin:10px;
+	border-radius:5px;
+}
+
+#form h2{
+	font-size:16px;
+	padding:10px;
+	border-bottom:1px solid #50B167;
+}
+
+#form .ageshow {
+    font-size:16px;
+	padding:10px;
+}
+
+input[type='text'] {
+	padding: 12px;
+	outline: 0;
+	text-align:center;
+	font-weight: bold;
+}
+.age1{
+    border-left:1px solid #50B167;
+    border-right:1px solid #50B167;
+}
+#calbtn {
+	cursor: pointer;
+	background: #50B167;
+	color: #FFF;
+	text-align:center;
+	font-size: 16px;
+	font-weight:bold;
+	margin-left:-12px;
+}
+#calbtn:hover{
+	border:1px solid #50B167;
+    background:#FFF;
+    color:#50B167;
+}
+
+.ageshow span {
+	display: inline-block;
+	font-size: 16px;
+	font-weight: bold;
+	color: #FF6A06;
+}
+/*age end*/
+
+.faq-item {
+    padding-top: 5px;
+    margin-right:5px;
+    margin-left:10px;
+}
+ 
+.question {
+    font-size:16px;
+    text-align:justify;
+    font-family:'Roboto';
+    font-style: normal;
+    line-height:1.8;
+    word-spacing:2px;
+    margin-right:5px;
+}
+ 
+.answer{
+    font-size:16px;
+    text-align:justify;
+    font-family:'Roboto';
+    font-style: normal;
+    line-height:1.8;
+    word-spacing:2px;
+    margin-left:-10px;
+    margin-top:-10px;
+}
+
+.social-share {
+padding:10px;
+}
+
+.social-share img{
+    display:inline;
+    margin-left:5px;
+    border:1px solid #000;
+    border-radius:50%;
+    height:30px;
+    width:30px;
+}
+
+.fa {
+  padding-top: 10px;
+  font-size: 20px;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 60%;
+}
+.fa:hover {
+    transform: scale(0.90);
+}
+.fa-print {
+  background: #000;
+  color: white;
+  box-shadow: var(--shadow-3);
+}
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+  box-shadow: var(--shadow-3);
+}
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+  box-shadow: var(--shadow-3);
+}
+.fa-whatsapp {
+  background: #25d366;
+  color: white;
+  box-shadow: var(--shadow-3);
+}
+.fa-telegram {
+  background: #0088cc;
+  color: white;
+   box-shadow: var(--shadow-3);
+}
+
+.fixfooter {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   padding-bottom:7px;
+   height:56px;
+   width: 100%;
+   background-color: #FFF;
+   color: white;
+   font-size:12px;
+   text-align: center;
+   border-top:1.50px solid #50B167;
+   box-shadow: var(--shadow-4);
+}
+
+.fixfooter a{color:#000;
+}
+
+.fixtxt {
+    font-size:18px;
+    font-weight:bold;
+    margin-left:-12px;
+    text-align:center;
+}
+ 
+#joinicn{
+    color:#FFF;
+    animation: mymove 1s infinite;
+}
+
+@keyframes mymove {
+  from {background-color: #50B167;}
+  to {background-color: #FFF;}
+}
+
+.footer {
+    background-color:#181818; 
+    color:#FFF; 
+    font-size:12px;
+    line-height:1.5;
+    padding:10px;
+    text-align:center;
+    width:100%;
+}
+
+.footer a{
+    color:#50B167;
+}
+
+@media only screen and (min-width: 768px) {
+.content_area{
+    margin-bottom:24px;
+}
+}
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 1200px)  {
+    .fixfooter {
+    display:none;
+    }
+    .content_area{
+    margin-bottom:8px;
+}
+}
